--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8726,205 +8726,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #0c2eee; }
+  background: #ada3f4; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #d38dfd; }
+  background: #881478; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #8b73ee; }
+  background: #6d1644; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #7f94c3; }
+  background: #955d13; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #9de464; }
+  background: #9643c4; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #1858fa; }
+  background: #6e014c; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #a21aac; }
+  background: #8616cf; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #b3fe82; }
+  background: #f13f3e; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #981620; }
+  background: #0235f5; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #de38b1; }
+  background: #e5cb83; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #2a155c; }
+  background: #a95279; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #a1f3f8; }
+  background: #e441ef; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #286319; }
+  background: #65aaef; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #bbb249; }
+  background: #bab9b0; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #cd631f; }
+  background: #979392; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #5c2618; }
+  background: #f8f1f4; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #f2c80d; }
+  background: #3fff84; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #43f2b0; }
+  background: #dc4eaa; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #527f97; }
+  background: #6c58a3; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #f70cde; }
+  background: #fccbde; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #4d7343; }
+  background: #d4e72e; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #a3ac55; }
+  background: #b59d01; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #b59f91; }
+  background: #533dc4; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #02beaf; }
+  background: #4c9141; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #bb80a7; }
+  background: #1928d7; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #cb689f; }
+  background: #9b8ee2; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #9dd77d; }
+  background: #8ae8a7; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #8a6c1a; }
+  background: #2f2b6c; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #8fbe06; }
+  background: #dfd201; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #2c384b; }
+  background: #aff0b3; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #be0f6d; }
+  background: #43c124; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #7cfa79; }
+  background: #ec427e; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #86411b; }
+  background: #717a28; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #472ee2; }
+  background: #039a01; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #b1b98d; }
+  background: #cf288b; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #b5b08c; }
+  background: #761999; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #6e41c8; }
+  background: #209642; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #d32e3f; }
+  background: #8e7f75; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #243873; }
+  background: #7be2de; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #1a7108; }
+  background: #4e71b5; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #02c967; }
+  background: #d0c4f9; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #3ce04e; }
+  background: #e1b30b; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #a6c75f; }
+  background: #c0452b; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #72c4c9; }
+  background: #475742; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #f86e3f; }
+  background: #45f281; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #8b90c6; }
+  background: #827b10; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #aff66a; }
+  background: #d39608; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #80fae7; }
+  background: #cb81bf; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #b308e0; }
+  background: #bbc420; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #0897b5; }
+  background: #0901ef; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #b3c54f; }
+  background: #22106f; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #a02f3d; }
+  background: #16e545; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #25df23; }
+  background: #ebe138; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #c08c8c; }
+  background: #230963; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #5919fa; }
+  background: #519030; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #c1b0c5; }
+  background: #ce1a14; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #43d58f; }
+  background: #079a1f; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #cd0c91; }
+  background: #a85fb2; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #588993; }
+  background: #176ff5; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #228e58; }
+  background: #adf38b; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #158a14; }
+  background: #343e9b; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #5d92ba; }
+  background: #c2ca0e; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #5d78bd; }
+  background: #696742; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #cb7603; }
+  background: #7a39dc; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #eb9231; }
+  background: #872b2f; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #e83ab2; }
+  background: #287b77; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #ef4712; }
+  background: #709351; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #c85f60; }
+  background: #e0f5e6; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #76461b; }
+  background: #806d20; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #bf4e8d; }
+  background: #2cb329; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #d26418; }
+  background: #a9e281; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #5db24e; }
+  background: #af73d3; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #416568; }
+  background: #f6179a; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #e4f114; }
+  background: #c3e3f4; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #407d99; }
+  background: #588f5a; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #7e8201; }
+  background: #06f772; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #43e59c; }
+  background: #df0bf1; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #cc4a63; }
+  background: #56e0a6; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #a728fa; }
+  background: #7e5d2e; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #2091fb; }
+  background: #2898a1; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #380477; }
+  background: #6d7ba4; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #30ce33; }
+  background: #fab328; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #f1481a; }
+  background: #2f3dfe; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #684295; }
+  background: #6f1d03; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #c23699; }
+  background: #d8e123; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #1d8591; }
+  background: #27e874; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #a0299e; }
+  background: #71e77f; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #5a45d2; }
+  background: #c2de58; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #7351a1; }
+  background: #8ec720; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #e351cd; }
+  background: #9d0a92; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #4a08e9; }
+  background: #b24dd1; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #c7e356; }
+  background: #435b58; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #3d5aa9; }
+  background: #d15ce1; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #d4a84c; }
+  background: #b96350; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #9f3f24; }
+  background: #1d086a; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #ff90be; }
+  background: #c8d123; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #c82aa8; }
+  background: #91d010; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #a07489; }
+  background: #781bf9; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #9cabd4; }
+  background: #452329; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #0a1088; }
+  background: #c7bcc1; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -10501,7 +10501,7 @@ table .bold-heading {
   margin: 12px auto 0;
   width: 100%; }
   .legend-goes-here .tile-box {
-    border: 4px solid #FFC700;
+    border: 4px solid #E3E3E3;
     box-sizing: border-box;
     padding: 20px;
     text-align: center; }
@@ -10646,12 +10646,13 @@ table .bold-heading {
   grid-template-columns: 85px 1fr;
   align-items: center;
   grid-gap: 20px; }
-  .inner-legend-colors-col .dropdown-logo {
-    margin-right: 0px; }
-    .inner-legend-colors-col .dropdown-logo .yellow-box {
+  .inner-legend-colors-col a .dropdown-logo {
+    margin-right: 0px;
+    width: 18px !important; }
+    .inner-legend-colors-col a .dropdown-logo .yellow-box {
       width: 18px !important;
       height: 18px !important; }
-    .inner-legend-colors-col .dropdown-logo .green-box {
+    .inner-legend-colors-col a .dropdown-logo .green-box {
       width: 18px !important;
       height: 18px !important; }
   .inner-legend-colors-col .dropdown-with-img {
@@ -10876,7 +10877,7 @@ table .bold-heading {
   display: inline-block; }
 
 .c15 {
-  background: #AB7698;
+  background: #D8A549;
   width: 18px;
   height: 18px;
   display: inline-block; }
@@ -15737,7 +15738,7 @@ option {
   grid-template-columns: 28px auto;
   align-items: center; }
   .dropdown-with-logos a .dropdown-logo {
-    width: auto !important; }
+    width: auto; }
     .dropdown-with-logos a .dropdown-logo img {
       width: 20px; }
 
