--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -3876,7 +3876,7 @@ align-items: center;
   grid-template-columns: 28px auto;
   align-items: center;
   .dropdown-logo {
-    width: auto !important;
+    width: auto;
     img {
       width: 20px;
     }
