--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -3767,7 +3767,7 @@ table .bold-heading {
  margin: 12px auto 0;
 width: 100%;
  .tile-box {
-  border: 4px solid #FFC700;
+  border: 4px solid #E3E3E3;
   box-sizing: border-box;
   padding: 20px;
   text-align: center;
@@ -3957,18 +3957,21 @@ line-height: 141.5%;
  grid-template-columns: 85px 1fr;
  align-items: center;
  grid-gap: 20px;
-
- .dropdown-logo {
-  margin-right: 0px;
-  .yellow-box {
-    width: 18px !important;
-    height: 18px !important;
+  a {
+    .dropdown-logo {
+      margin-right: 0px;
+      width: 18px !important;
+      .yellow-box {
+        width: 18px !important;
+        height: 18px !important;
+      }
+      .green-box {
+        width: 18px !important;
+        height: 18px !important;
+      }
+    }
   }
-  .green-box {
-    width: 18px !important;
-    height: 18px !important;
-  }
-}
+ 
  .dropdown-with-img {
   width: 60px;  
  }
@@ -4239,7 +4242,7 @@ line-height: 141.5%;
 }
 
 .c15 {
-  background: #AB7698;
+  background: #D8A549;
   width: 18px;
   height: 18px;
   display: inline-block;
