--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8726,205 +8726,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #ada3f4; }
+  background: #4cc1f9; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #881478; }
+  background: #6799e3; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #6d1644; }
+  background: #32437a; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #955d13; }
+  background: #615a80; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #9643c4; }
+  background: #962b69; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #6e014c; }
+  background: #b3404d; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #8616cf; }
+  background: #a5f474; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #f13f3e; }
+  background: #59e45d; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #0235f5; }
+  background: #e2beab; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #e5cb83; }
+  background: #fea016; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #a95279; }
+  background: #9a5526; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #e441ef; }
+  background: #968638; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #65aaef; }
+  background: #307bb2; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #bab9b0; }
+  background: #a24a77; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #979392; }
+  background: #514ff3; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #f8f1f4; }
+  background: #c5d5d1; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #3fff84; }
+  background: #d10426; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #dc4eaa; }
+  background: #a950e2; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #6c58a3; }
+  background: #ca32be; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #fccbde; }
+  background: #df74a0; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #d4e72e; }
+  background: #db6a98; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #b59d01; }
+  background: #ffa09f; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #533dc4; }
+  background: #55c45d; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #4c9141; }
+  background: #2b4dbc; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #1928d7; }
+  background: #709299; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #9b8ee2; }
+  background: #ce9d2e; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #8ae8a7; }
+  background: #c4ca28; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #2f2b6c; }
+  background: #46f3ad; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #dfd201; }
+  background: #270ce3; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #aff0b3; }
+  background: #965b37; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #43c124; }
+  background: #7f7a5d; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #ec427e; }
+  background: #9fc4e2; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #717a28; }
+  background: #c36dc1; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #039a01; }
+  background: #6a4a4e; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #cf288b; }
+  background: #703cc1; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #761999; }
+  background: #e791ae; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #209642; }
+  background: #5471c6; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #8e7f75; }
+  background: #9c3c15; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #7be2de; }
+  background: #a8bc2f; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #4e71b5; }
+  background: #b37ec2; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #d0c4f9; }
+  background: #09c0e3; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #e1b30b; }
+  background: #b82d82; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #c0452b; }
+  background: #b5822b; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #475742; }
+  background: #7de144; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #45f281; }
+  background: #8592e7; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #827b10; }
+  background: #ef23cc; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #d39608; }
+  background: #30b9cd; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #cb81bf; }
+  background: #a7adce; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #bbc420; }
+  background: #569478; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #0901ef; }
+  background: #86dad9; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #22106f; }
+  background: #177a66; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #16e545; }
+  background: #28bbb1; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #ebe138; }
+  background: #515e10; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #230963; }
+  background: #4a51d1; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #519030; }
+  background: #ebc49e; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #ce1a14; }
+  background: #4d504a; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #079a1f; }
+  background: #1778d6; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #a85fb2; }
+  background: #a91b90; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #176ff5; }
+  background: #51cfb4; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #adf38b; }
+  background: #d01c0f; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #343e9b; }
+  background: #dfdbdf; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #c2ca0e; }
+  background: #c05996; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #696742; }
+  background: #150f9c; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #7a39dc; }
+  background: #12333c; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #872b2f; }
+  background: #9337e9; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #287b77; }
+  background: #803282; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #709351; }
+  background: #11c72a; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #e0f5e6; }
+  background: #3016e7; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #806d20; }
+  background: #60950f; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #2cb329; }
+  background: #d88760; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #a9e281; }
+  background: #35b41b; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #af73d3; }
+  background: #dd01de; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #f6179a; }
+  background: #0747b2; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #c3e3f4; }
+  background: #428ace; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #588f5a; }
+  background: #b5d270; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #06f772; }
+  background: #6bbbed; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #df0bf1; }
+  background: #92adf4; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #56e0a6; }
+  background: #fe5fca; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #7e5d2e; }
+  background: #cd6d5b; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #2898a1; }
+  background: #d4cfa5; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #6d7ba4; }
+  background: #25bc40; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #fab328; }
+  background: #c7ba3e; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #2f3dfe; }
+  background: #31e531; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #6f1d03; }
+  background: #c5ce82; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #d8e123; }
+  background: #317336; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #27e874; }
+  background: #ce99cb; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #71e77f; }
+  background: #39aa3b; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #c2de58; }
+  background: #01fcc4; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #8ec720; }
+  background: #8f59ee; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #9d0a92; }
+  background: #2283cd; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #b24dd1; }
+  background: #ebf120; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #435b58; }
+  background: #b276c6; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #d15ce1; }
+  background: #34adab; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #b96350; }
+  background: #a557cd; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #1d086a; }
+  background: #6e9982; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #c8d123; }
+  background: #97cc85; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #91d010; }
+  background: #2175ab; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #781bf9; }
+  background: #675e16; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #452329; }
+  background: #cd3314; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #c7bcc1; }
+  background: #467480; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -10911,6 +10911,24 @@ table .bold-heading {
   width: 18px;
   height: 18px;
   display: inline-block; }
+
+.table-preview .table {
+  border: 0px solid #cccccc;
+  color: #7D7D7D;
+  font-size: 13px; }
+  .table-preview .table thead {
+    background: transparent; }
+    .table-preview .table thead th {
+      border-top: 0px solid #cccccc !important;
+      border-bottom: 1px solid #000 !important;
+      padding: 10px 0px; }
+  .table-preview .table tbody th {
+    font-weight: bold;
+    color: #4C4C4C;
+    padding: 10px 0px; }
+  .table-preview .table tbody td {
+    padding: 10px 0px;
+    text-align: center; }
 
 @font-face {
   font-family: 'proxima-semi-bold';
